# cloud-native-microservices

./: .gitignore  README.md  compose-infrastructure.yaml  compose.yaml  renovate.json
.github/workflows/: ads-build.yml  auth-build.yml  catalog-build.yml  gateway-build.yml  review-build.yml  tinyurl-build.yml
api-gateway/: pom.xml
services/notification/: pom.xml
src/ads/: Cargo.toml  README.md  aot-jar.properties  aot-native-image.properties  k8s.yml  micronaut-cli.yml  mvnw  openapi.properties  pom.xml
src/ads/src/: main.rs
src/ads/src/main/java/com/uuhnaut69/: Application.java
src/ads/src/main/java/com/uuhnaut69/domain/: Ad.java  BaseEntity.java  DefaultAdService.java
src/ads/src/main/java/com/uuhnaut69/domain/api/: AdService.java
src/ads/src/main/java/com/uuhnaut69/domain/spi/: AdRepository.java
src/ads/src/main/java/com/uuhnaut69/infrastructure/configuration/: CdiConfiguration.java
src/ads/src/main/java/com/uuhnaut69/infrastructure/persistence/: AdEntity.java  AdR2DbcRepository.java
src/ads/src/main/java/com/uuhnaut69/infrastructure/resource/: AdResource.java  AdResponse.java
src/ads/src/main/java/com/uuhnaut69/infrastructure/runner/: DataInitializer.java
src/ads/src/main/resources/: application.properties  logback.xml
src/ads/src/main/resources/db/migration/: V1__init-schema.sql
src/ads/src/test/java/com/uuhnaut69/: AdsTest.java
src/auth/: .env.example  .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  tsconfig.json
src/auth/src/: app.module.ts  main.rs  main.ts
src/auth/test/: app.e2e-spec.ts
tinyurl/: pom.xml
(+79 files in other folders)
