[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
